--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.21",
+    "date-fns": "^2.0.0",
     "next": "16.1.6",
     "openmeteo": "^1.2.3",
     "react": "19.2.3",
